RESOLVED FIXED75185
Print dlerror() when dyld functions fail unexpectedly
https://bugs.webkit.org/show_bug.cgi?id=75185
Summary Print dlerror() when dyld functions fail unexpectedly
mitz
Reported 2011-12-23 20:30:31 PST
Print dlerror() when dyld functions fail unexpectedly
Attachments
Patch (2.83 KB, patch)
2011-12-23 20:32 PST, mitz
sam: review+
mitz
Comment 1 2011-12-23 20:32:09 PST
mitz
Comment 2 2011-12-23 20:35:42 PST
Note You need to log in before you can comment on or make changes to this bug.